--- a/.github/workflows/gh_sast.yaml
+++ b/.github/workflows/gh_sast.yaml
@@ -1,4 +1,4 @@
-name: GH Actions SAST - Required Workflow
+name: GHA Static Analyzer - Required Workflow
 
 # Secrets are inherited from calling workflow within same org or enterprise
 # For all other outside wortkflows
@@ -7,7 +7,7 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  analyze-ci:
+  check-anti-patterns:
     permissions:
       contents: read
       actions: read
@@ -15,9 +15,4 @@ jobs:
       # security-events: write # publish codeql results
     uses: Kong/public-shared-actions/.github/workflows/gh-analyze.yml@feat/gh-anti-pattern-scan 
     with:
-      FAIL_SHELLCHECK_LEVEL: ${{vars.FAIL_SHELLCHECK_LEVEL}}
-      FAIL_ACTIONLINT_LEVEL: ${{vars.FAIL_ACTIONLINT_LEVEL}}
-      FAIL_GHLINT: ${{vars.FAIL_GHLINT}}
       FAIL_ZIZMOR: ${{vars.FAIL_ZIZMOR}}
-      GHLINT_FILES_SCAN_REGEX: >-
-        .github/workflows/*.y*ml
